<resources>
  <string name="app_name">Ava Launcher</string>
  <string name="callButton">Make a phone call</string>
  <string name="searchButton">Search the internet</string>
  <string name="messageButton">Send a message</string>
  <string name="search_hint">Search an app</string>
  <string name="title_activity_searchable">SearchableActivity</string>
  <string name="app_label"> Search Feature</string>
  <string name="search_view">Enter search</string>

  <string name="main_question">WHAT DO YOU WANT TO DO?</string>
  <string name="main_call">MAKE A PHONE CALL</string>
  <string name="main_message">SEND A MESSAGE</string>
  <string name="main_internet">SEARCH THE INTERNET</string>
  <string name="main_tool">USE COMMON TOOLS</string>
  <string name="main_apps">LAUNCH AN APP</string>

  <string name="using_whatsapp">Using WhatsApp</string>
  <string name="using_viber">Using Viber</string>
  <string name="using_reg_phone">Using regular phone</string>
  <string name="using_messenger">Using Messenger</string>
  <string name="using_skype">Using Skype</string>
  <string name="pick_contact_from_list">OPEN FULL CONTACT LIST</string>

  <string name="plus_sign">+</string>
  <string name="minus_sign">\u2013</string>
  <string name="default_quick_call">Set a favourite contact</string>
  <string name="ellipsis">...</string>
  <string name="add_fav_contact">Pick a favourite from contacts</string>

  <string name="add_fav_website">Pick a favourite website</string>
  <string name="add_remove_fav_website">Pick/remove favourite website</string>
  <string name="remove_fav_website">Remove  website from favourites</string>
  <string name="save_button">Save</string>

  <string name="turn_torch_on">TURN TORCH ON</string>
  <string name="turn_torch_off">TURN TORCH OFF</string>
  <string name="take_photo">TAKE A PHOTO</string>
  <string name="add_contact">ADD A CONTACT</string>
  <string name="set_alarm">SET AN ALARM</string>
  <string name="launch_settings">LAUNCH SETTINGS</string>
  <string name="del_text">DEL</string>
  <string name="add_remove_fav">Pick/remove favourite contact</string>
  <string name="remove_fav">Remove favourite contact</string>
  <string name="add_fav">Pick favourite contact</string>
  <string name="enter_website">Enter website: example.com</string>
  <string name="list_of_downloaded_apps">List of all apps</string>
  <string name="view_all_apps">View all \n apps</string>

  <string name="go_to_next">NEXT</string>
  <string name="add_fav_web">Pick favourite website</string>
  <string name="welcome_to_launcher">Welcome to the Ava Launcher !</string>
  <string name="second_screen">You may choose now your favorite websites.</string>
  <string name="wizard_favorite">Select favorite contacts here or skip.</string>
  <string name="wizard_favorite_2">Select favorite websites here or skip.</string>


  <string name="tap_to_search">TAP TO SEARCH</string>
  <string name="add_website_to_favourites">ADD WEBSITE TO FAVOURITES</string>
  <string name="open_browser">Open browser</string>
  <string name="welcome_to_ava_launcher">WELCOME TO AVA LAUNCHER!</string>
  <string name="go_to_prev">PREVIOUS</string>
  <string name="message">MESSAGE</string>
  <string name="call">CALL</string>
  <string name="install_app">Install App</string>
  <string name="below_are_your_most_frequently_used_apps">Below are your most frequently used apps</string>
  <string name="pick_three_favourite_contacts">PICK THREE FAVOURITE CONTACTS</string>
  <string name="list_of_drawers">LIST OF APPS</string>
  <string name="using_sms_app">USING SMS APP</string>
</resources>
