<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mainAppLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.launcher.ava.helperApp.MainAppActivity">

    <Button
      android:id="@+id/messageButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="74dp"
      android:layout_marginBottom="28dp"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:onClick="launchMessages"
      android:text="@string/messageButton"
      app:layout_constraintBottom_toTopOf="@+id/searchButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.517"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/callButton"
      app:layout_constraintVertical_bias="0.0"/>

    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="178dp"
      android:text="What would you like to do?"
      android:textAlignment="center"
      android:textSize="50sp"
      app:layout_constraintBottom_toTopOf="@+id/messageButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="13dp"
        android:onClick="launchChrome"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageButton"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:onClick="launchContacts"
        android:text="@string/callButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="99dp"
      android:layout_marginBottom="49dp"
      android:layout_marginStart="259dp"
      android:layout_marginEnd="64dp"
      android:onClick="launchAppScreen"
      android:text="Button"
      app:layout_constraintBottom_toTopOf="@+id/searchButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/messageButton"/>
</android.support.constraint.ConstraintLayout>
