<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreenCommonTools">

    <android.support.constraint.Guideline
        android:id="@+id/guide0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cLayoutQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/topQuestionBarColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide0"
        app:layout_constraintBottom_toTopOf="@+id/guide1">

      <TextView
        android:id="@+id/textQuestion"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/main_question"
        android:textColor="@color/dimWhiteColor"
        android:textSize="28sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cLayoutTorch"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/lightGray"
    android:onClick="toggleFlash"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/guide2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guide1">

    <ImageView
      android:id="@+id/imagePhone"
      android:layout_width="126dp"
      android:layout_height="94dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="250dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/ic_lantern" />

    <TextView
      android:id="@+id/torchText"
      android:layout_width="0dp"
      android:layout_height="73dp"
      android:layout_marginStart="170dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/turn_torch_on"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:fontFamily="sans-serif-black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.49" />

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cLayoutPhoto"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/darkGray"
    android:onClick="launchDefaultCamera"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/guide3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guide2">

    <ImageView
      android:id="@+id/imageMessages"
      android:layout_width="126dp"
      android:layout_height="94dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="250dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/ic_photo_camera" />

    <TextView
      android:id="@+id/textMessages"
      android:layout_width="0dp"
      android:layout_height="73dp"
      android:layout_marginStart="170dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/take_photo"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:fontFamily="sans-serif-black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.49" />

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cLayoutContact"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/lightGray"
    android:onClick="launchAddContact"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/guide4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guide3">

    <ImageView
      android:id="@+id/imageInternet"
      android:layout_width="126dp"
      android:layout_height="94dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="250dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/ic_add_contacts" />

    <TextView
      android:id="@+id/textInternet"
      android:layout_width="219dp"
      android:layout_height="75dp"
      android:layout_marginStart="170dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/add_contact"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:fontFamily="sans-serif-black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.49" />

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cLayoutSettings"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/darkGray"
    android:onClick="launchSettings"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/guide5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guide4">

    <ImageView
      android:id="@+id/imageTools"
      android:layout_width="126dp"
      android:layout_height="94dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="250dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/ic_settings_work_tool" />

    <TextView
      android:id="@+id/textTools"
      android:layout_width="220dp"
      android:layout_height="73dp"
      android:layout_marginStart="170dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/launch_settings"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:fontFamily="sans-serif-black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.49" />

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cLayoutAlarm"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/lightGray"
    android:onClick="launchAlarmSettings"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guide5">

    <ImageView
      android:id="@+id/imageApp"
      android:layout_width="126dp"
      android:layout_height="94dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="250dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/ic_alarm_clock" />

    <TextView
      android:id="@+id/textApp"
      android:layout_width="0dp"
      android:layout_height="73dp"
      android:layout_marginStart="170dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/set_alarm"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:fontFamily="sans-serif-black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.49" />

  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>